# bendy

./: .gitignore  LICENSE  README.md  example_manifest.py  main.py  pyproject.toml  МАНИФЕСТ.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
bendy/: __init__.py  aggregate.py  cli.py  field.py  generator.py  merger.py  reader.py  state.py  type_mapper.py  types.py  validator.py  value_object.py
bendy/templates/: app_dtos.py.jinja  app_use_cases.py.jinja  domain_enums.py.jinja  domain_models.py.jinja  domain_repository.py.jinja  domain_value_objects.py.jinja  infra_models.py.jinja  infra_repository.py.jinja  infra_uow.py.jinja  router.py.jinja
tests/: test_deletion_and_state.py  test_e2e_cli.py  test_e2e_deletion.py  test_generator.py  test_merger.py  test_merger_comprehensive.py  test_reader.py  test_type_mapper.py  test_validator.py
