[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bendykit"
version = "0.1.0"
description = "DDD scaffolding framework and code generator for Python backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
    "rich>=13",
]

[project.scripts]
bendykit = "bendy.cli:main"

[project.urls]
Repository = "https://github.com/flacsy/bendy"

[tool.setuptools.packages.find]
include = ["bendy*"]

[tool.setuptools.package-data]
bendy = ["templates/*.jinja"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "pre-commit"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in default args is intentional

[tool.ruff.lint.isort]
known-first-party = ["bendy"]
